# projecthailai

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build.yml
docker/control/: Dockerfile  entrypoint.sh
docker/perception/: Dockerfile  entrypoint.sh
ros2_ws/src/control/: package.xml  setup.py
ros2_ws/src/control/control/: servo_controller_node.py
ros2_ws/src/face_tracker_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/face_tracker_msgs/msg/: FaceOffset.msg
ros2_ws/src/perception/: package.xml  setup.py
ros2_ws/src/perception/perception/: face_detector_node.py
