<?xml version="1.0"?>
<package format="3">
  <name>control</name>
  <version>0.1.0</version>
  <description>Control node: PID controller driving pan/tilt servos from /face/offset</description>
  <maintainer email="ylee0004@github.com">ylee0004</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>face_tracker_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
