<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.1.0</version>
  <description>Perception node: face detection using MediaPipe, publishes /face/offset</description>
  <maintainer email="ylee0004@github.com">ylee0004</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>face_tracker_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
